manifests/grafana/grafana-full.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: grafana-monitoring
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana-deployment
  namespace: grafana-monitoring
spec:
  selector:
    matchLabels:
      app: grafana
  replicas: 1 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: grafana
        name: grafana
    spec:
      securityContext:
        runAsUser: 472
        runAsGroup: 0
        fsGroup: 0
#         allowPrivilegeEscalation: true
#         supplementalGroups:
#           - 0
    # spec:
    #   initContainers:
    #     - name: init-files
    #       image: grafana/grafana-oss
    #       command: ['/bin/bash', '-c']
    #       args: ['cp -r /var/lib/grafana/ /data']
    #       volumeMounts:
    #         - mountPath: /data
    #           name: grafana-storage
    spec:
      containers:
      - name: grafana
#        command: [ '/bin/bash', '-c', 'chown -R 472:472 /var/lib/grafana' ]
#        command: [ '/bin/bash', '-c', 'sleep 4000' ]
        image: grafana/grafana-oss
        ports:
        - containerPort: 3000
        volumeMounts:
          - mountPath: "/var/lib/grafana"
            name: grafana-storage
      volumes:
        - name: grafana-storage
          hostPath:
            path: "/mnt/kubernetes_share/homelab_prod/grafana/data"
#            type: DirectoryOrCreate
---
apiVersion: v1
kind: Service
metadata:
  name: grafana-service
  namespace: grafana-monitoring
  labels:
    name: grafana-svc
spec:
  type: NodePort
  selector:
    name: grafana
  ports:
    - port: 3000
      # By default and for convenience, the `targetPort` is set to
      # the same value as the `port` field.
      targetPort: 3000
      # Optional field
      # By default and for convenience, the Kubernetes control plane
      # will allocate a port from a range (default: 30000-32767)
      #nodePort: 30000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: grafana-monitoring
spec:
  rules:
  - host: "grafana.kubernet.es"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: grafana-service
            port:
              number: 3000
